Add DOAB Parser rules + tests